# rust_records

./: LICENSE  README.md
language/: README.md
language/02_guessing_game/correct_quit/: Cargo.toml
language/02_guessing_game/correct_quit/src/: main.rs
language/02_guessing_game/guessing_game/src/: main.rs
language/02_guessing_game/invalid_input/: Cargo.toml
language/02_guessing_game/invalid_input/src/: main.rs
language/02_guessing_game/loop/: Cargo.toml
language/02_guessing_game/loop/src/: main.rs
language/02_guessing_game/match_number/: Cargo.toml
language/02_guessing_game/match_number/src/: main.rs
language/02_guessing_game/processing_guess/: Cargo.toml
language/02_guessing_game/processing_guess/src/: main.rs
language/02_guessing_game/random/src/: main.rs
language/03_common_programming_concepts/comments/src/: main.rs
language/03_common_programming_concepts/control_flow/src/: main.rs
language/06_enums_and_pattern_matching/match_costruct/: Cargo.toml
language/07_packages_crates_modules/restaurant4/: Cargo.toml
language/08_collections/hashmap/: main.rs
language/08_collections/string_utf8/: main.rs
language/08_collections/vector/: main.rs
language/09_error_handling/main_return_result/: Cargo.toml
language/13_iterators_closures/1_closures/: main.rs
language/13_iterators_closures/4_loops_iterators/: main.rs
language/14_cargo/1_release/hello/: Cargo.toml
language/15_smart_pointers/box/: main.rs
language/15_smart_pointers/deref/: main.rs
language/15_smart_pointers/drop/: main.rs
language/15_smart_pointers/rc/: main.rs
(+66 files in other folders)
